landing page style created

--- a/index.html
+++ b/index.html
@@ -5,10 +5,114 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Import Fontawesome -->
+  <script src="https://kit.fontawesome.com/a3027ea2cf.js" crossorigin="anonymous" defer></script>
+  <!-- Link CSS -->
+  <link rel="stylesheet" href="src/css/style.css">
   <title>Welcome | Project Hub</title>
 </head>
 
 <body>
+  <!-- Landing Page Container -->
+  <div class="landing-page">
+    <!-- Navbar -->
+    <div class="navbar">
+      <div class="navbar__logo-box">
+        <i class="fa-brands fa-bandcamp navbar__logo-box__logo"></i>
+        <div class="navbar__logo-box__name">Project <span class="navbar__logo-box__name-span">Hub</span></div>
+      </div>
+      <!-- Navigation -->
+      <nav class="navbar__navigation">
+        <a href="#" class="navbar__navigation__link button button-primary">Login</a>
+        <a href="#" class="navbar__navigation__link button button-secondary">Register</a>
+      </nav>
+    </div>
+    <!-- Header -->
+    <header class="header">
+      <img src="src/images/landing-page/landing-page-01.png" alt="Header Illustration" class="header__image">
+      <h1 class="header__heading">Manage <span class="header__heading-span">Your</span> Projects</h1>
+      <p class="header__heading-sub">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+      <a href="#" class="button button-primary">Get started</a>
+    </header>
+    <!-- Features Section -->
+    <section class="section-features">
+      <div class="section-features__card ">
+        <i class="fa-solid fa-users section-features__card__icon"></i>
+        <p class="section-features__card__name">Community</p>
+        <p class="section-features__card__description">Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="section-features__card ">
+        <i class="fa-solid fa-envelope section-features__card__icon"></i>
+        <p class="section-features__card__name">Message</p>
+        <p class="section-features__card__description">Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="section-features__card ">
+        <i class="fa-solid fa-user-lock section-features__card__icon"></i>
+        <p class="section-features__card__name">Security</p>
+        <p class="section-features__card__description">Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="section-features__card ">
+        <i class="fa-brands fa-btc section-features__card__icon"></i>
+        <p class="section-features__card__name">Crypto</p>
+        <p class="section-features__card__description">Lorem ipsum dolor sit amet.</p>
+      </div>
+    </section>
+    <!-- Adventure Section -->
+    <section class="section-adventure">
+      <header class="section-adventure__header">
+        <img src="src/images/landing-page/landing-page-02.png" alt="Adventure Illustration"
+          class="section-adventure__header__image">
+        <h2 class="section-adventure__header__heading">Start <span
+            class="section-adventure__header__heading-span">Your</span> Adventure With Us</h2>
+      </header>
+      <div class="section-adventure__container">
+        <div class="section-adventure__details">
+          <h1 class="section-adventure__details__heading">Manage <span
+              class="section-adventure__header__heading-span">Team</span> Projects</h1>
+          <p class="section-adventure__details__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing
+            elit. Vel,
+            molestiae
+            est fuga esse
+            ipsum quo.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, molestiae est
+            fuga esse ipsum quo.</p>
+        </div>
+        <img src="src/images/landing-page/landing-page-03.png" alt="Adventure Illustration"
+          class="section-adventure__image">
+      </div>
+      <div class="section-adventure__container">
+        <img src="src/images/landing-page/landing-page-04.png" alt="Adventure Illustration"
+          class="section-adventure__image">
+        <div class="section-adventure__details">
+          <h1 class="section-adventure__details__heading">Keep Track Of <span
+              class="section-adventure__header__heading-span">Your</span> Tasks</h1>
+          <p class="section-adventure__details__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing
+            elit. Vel,
+            molestiae
+            est fuga
+            esse
+            ipsum quo.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, molestiae est
+            fuga esse ipsum quo.</p>
+        </div>
+      </div>
+      <div class="section-adventure__container">
+        <div class="section-adventure__details">
+          <h1 class="section-adventure__details__heading">Trade <span
+              class="section-adventure__header__heading-span">Crypto</span> </h1>
+          <p class="section-adventure__details__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing
+            elit. Vel,
+            molestiae
+            est fuga esse
+            ipsum quo.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, molestiae est
+            fuga esse ipsum quo.</p>
+        </div>
+        <img src="src/images/landing-page/landing-page-05.png" alt="Adventure Illustration"
+          class="section-adventure__image">
+      </div>
+    </section>
+    <footer class="footer">
+      <a href="mailto: telrodan@gmail.com" class="footer__link">&copy; Keresztes-Nagy Bence 2022</a>
+    </footer>
+  </div>
 
 </body>
 
